# LayoutDiT

./: .gitignore  Makefile  README.md  TODO  download_test_data_script.py  pyproject.toml
scripts/: data_gen.sh
src/layoutdit/: config.py  config_constructs.py  log.py  loss.py  loss_old.py  main.py  model.py  model_old.py  publay_dataset.py  train_entrypoint.py  train_utils.py  transforms.py
src/layoutdit/configuration/: __init__.py  config_constructs.py  model_config.py
src/layoutdit/data/: publay_dataset.py  transforms.py
src/layoutdit/evaluation/: evaluator.py  evaluator_old.py
src/layoutdit/modeling/: backbone_type.py  dit_backbone.py  model.py
src/layoutdit/training/: prof_trace_handler.py  trainer.py  trainer_old.py
tests/: test_dataset.py  test_loss.py
