[project]
name = "layoutdit"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fsspec>=2025.3.0",
    "gcsfs>=2025.3.0",
    "pillow>=11.1.0",
    "pycocotools>=2.0.8",
    "pydantic>=2.10.6",
    "tensorboard-plugin-profile>=2.19.4",
    "tensorflow>=2.19.0",
    "torch==2.4.0",
    "torch-tb-profiler>=0.4.3",
    "torchvision>=0.19.0",
    "transformers>=4.49.0",
]

[project.scripts]
layoutdit = "layoutdit:main"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "tensorboard>=2.19.0",
]

